Bug 131755 - Navigator Drag Mode does not remain as set
Summary: Navigator Drag Mode does not remain as set
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2 all versions
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2020-03-31 21:50 UTC by Jim Raykowski
Modified: 2021-11-11 07:31 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2020-03-31 21:50:52 UTC
Steps to repro:

1) Open Writer Navigator either F5 or sidebar version
2) Right click in navigation content view to show context menu
3) Select Drag Mode > Insert as Link
4) Exit and restart Writer
5) Check Drag Mode setting

Results: Drag Mode setting does not remain as previous set

Expected results: Drag Mode remains as previous set

Regression happened after 4.3.0.0.alpha+ and before 5.2.0.0.alpha0+
Comment 1 Dieter 2020-04-03 08:37:18 UTC
I confirm it with

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 1c9ced04189c9d23ffea05d5570960b54b05ef28
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-GB
Calc: CL
Comment 2 Commit Notification 2021-10-27 20:51:47 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fc71991510df6ac6d9de278689f2def1a5af775e

tdf#131755 SwNavigator: Fix drag mode configuration restore

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Dieter 2021-11-11 07:30:58 UTC
VERIFIED with

Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 742b8befecbcfc0cfab87cfcd87c83b7d8ef32ab
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Jim, thank you for fixing it!