tdf#131755 SwNavigator: Fix drag mode configuration restore

Seems extraction from the Any here needs to be to a long even though
an unsigned short is inserted.

Change-Id: I3439d4282c99d2b83d4e9e146e241db0dd41a452